--- a/styles.css
+++ b/styles.css
@@ -1,194 +1,44 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  background-image: url("https://wallpaperaccess.com/full/3461470.jpg");
+  height: 100%;
   width: 100%;
-}
-
-#mainbox {
-  width: 90%;
-  background-color: rgba(7, 7, 7, 0.7);
-  margin-left: 50px;
-}
-
-.container1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-image: url("https://previews.123rf.com/images/titco/titco2004/titco200400024/144919598-wood-background-abstract-wooden-texture.jpg");
+  padding-top: 50px;
+
 }
 
-.items1 {
-  padding: 20px;
-  text-align: center;
-  width: 100px;
-  height: 65px;
-  border: solid;
-  border-color: black;
-  font-size: 50px;
+.mainboard {
+  border: 1px solid;
+  height: 480px;
+  width: 480px;
+  display: flex;
+  flex-wrap: wrap;
+  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.65);
 }
 
-.items1:nth-child(even) {
-  background-color: green;
-}
-
-.items1:nth-child(odd) {
-  background-color: white;
-}
-
-.container2 {
+.white {
+  height: 60px;
+  width: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.items2 {
-  padding: 20px;
-  text-align: center;
-  width: 100px;
-  height: 65px;
-  border: solid;
-  border-color: black;
-  font-size: 50px;
-}
-
-.items2:nth-child(even) {
+  font-size: 45px;
   background-color: white;
 }
 
-.items2:nth-child(odd) {
-  background-color: green;
-}
-
-.container3 {
+.green {
+  height: 60px;
+  width: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.items3 {
-  padding: 20px;
-  width: 100px;
-  height: 65px;
-  border: solid;
-  border-color: black;
-}
-
-.items3:nth-child(even) {
-  background-color: green;
-}
-
-.items3:nth-child(odd) {
-  background-color: white;
-}
-
-.container4 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.items4 {
-  padding: 20px;
-  width: 100px;
-  height: 65px;
-  border: solid;
-  border-color: black;
-}
-
-.items4:nth-child(even) {
-  background-color: white;
-}
-
-.items4:nth-child(odd) {
-  background-color: green;
-}
-
-.container5 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.items5 {
-  padding: 20px;
-  width: 100px;
-  height: 65px;
-  border: solid;
-  border-color: black;
-}
-
-.items5:nth-child(even) {
-  background-color: green;
-}
-
-.items5:nth-child(odd) {
-  background-color: white;
-}
-
-.container6 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.items6 {
-  padding: 20px;
-  width: 100px;
-  height: 65px;
-  border: solid;
-  border-color: black;
-}
-
-.items6:nth-child(even) {
-  background-color: white;
-}
-
-.items6:nth-child(odd) {
-  background-color: green;
-}
-
-.container7 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.items7 {
-  padding: 20px;
-  text-align: center;
-  width: 100px;
-  height: 65px;
-  border: solid;
-  border-color: black;
-  font-size: 50px;
-}
-
-.items7:nth-child(even) {
-  background-color: green;
-}
-
-.items7:nth-child(odd) {
-  background-color: white;
-}
-
-.container8 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.items8 {
-  padding: 20px;
-  text-align: center;
-  width: 100px;
-  height: 65px;
-  border: solid;
-  border-color: black;
-  font-size: 50px;
-}
-
-.items8:nth-child(even) {
-  background-color: white;
-}
-
-.items8:nth-child(odd) {
+  font-size: 45px;
   background-color: green;
 }
