--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,6 +28,8 @@ body {
   width: 100vw;
   max-width: 480px;
   max-height: 480px;
+  min-width: 300px;
+  min-height: 300px;
   box-shadow: 0 8px 8px rgba(0, 0, 0, 0.65);
   justify-content: center;
   align-items: center;
