--- a/styles/input.css
+++ b/styles/input.css
@@ -50,4 +50,168 @@ body .grid__item:nth-of-type(-2n + 8), body .grid__item:nth-of-type(8) ~ *:nth-o
   background-color: #779558;
 }
 
+#pawn1 {
+  position: relative;
+  /*Allows keyframe movements*/
+  animation-name: fmove;
+  animation-duration: 5s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fmove {
+  0% {
+    background-color: transparent;
+    top: 1px;
+  }
+  100% {
+    background-color: transparent;
+    top: 140px;
+  }
+}
+#pawn2 {
+  position: relative;
+  animation-name: secmove;
+  animation-duration: 5s;
+  animation-fill-mode: forwards;
+  animation-delay: 5s;
+}
+
+@keyframes secmove {
+  0% {
+    background-color: transparent;
+    bottom: 1px;
+  }
+  100% {
+    background-color: transparent;
+    bottom: 140px;
+  }
+}
+#rook1 {
+  position: relative;
+  animation-name: thrmove;
+  animation-duration: 5s;
+  animation-fill-mode: forwards;
+  animation-delay: 10s;
+}
+
+@keyframes thrmove {
+  0% {
+    background-color: transparent;
+    top: 1px;
+  }
+  100% {
+    background-color: transparent;
+    top: 140px;
+  }
+}
+#knight1 {
+  position: relative;
+  animation-name: fthmove;
+  animation-duration: 5s;
+  animation-fill-mode: forwards;
+  animation-delay: 15s;
+}
+
+@keyframes fthmove {
+  0% {
+    background-color: transparent;
+    bottom: 1px;
+  }
+  50% {
+    background-color: transparent;
+    bottom: 140px;
+  }
+  75% {
+    background-color: transparent;
+    bottom: 140px;
+    right: 1px;
+  }
+  100% {
+    background-color: transparent;
+    bottom: 140px;
+    right: 70px;
+  }
+}
+#pawn3 {
+  position: relative;
+  animation-name: ffthmove;
+  animation-duration: 5s;
+  animation-fill-mode: forwards;
+  animation-delay: 20s;
+}
+
+@keyframes ffthmove {
+  0% {
+    background-color: transparent;
+    top: 1px;
+  }
+  100% {
+    background-color: transparent;
+    top: 70px;
+  }
+}
+#pawn4 {
+  position: relative;
+  animation-name: sxthmove;
+  animation-duration: 5s;
+  animation-fill-mode: forwards;
+  animation-delay: 25s;
+}
+
+@keyframes sxthmove {
+  0% {
+    background-color: transparent;
+    bottom: 1px;
+  }
+  100% {
+    background-color: transparent;
+    bottom: 140px;
+  }
+}
+#bish1 {
+  position: relative;
+  animation-name: svnthmove;
+  animation-duration: 5s;
+  animation-fill-mode: forwards;
+  animation-delay: 30s;
+}
+
+@keyframes svnthmove {
+  0% {
+    background-color: transparent;
+    top: 1px;
+    right: 1px;
+  }
+  100% {
+    background-color: transparent;
+    top: 205px;
+    right: 205px;
+  }
+}
+#pawneat {
+  position: relative;
+  animation-name: eithmove;
+  animation-duration: 5s;
+  animation-fill-mode: forwards;
+  animation-delay: 35s;
+}
+
+@keyframes eithmove {
+  0% {
+    background-color: transparent;
+    bottom: 1px;
+    left: 1px;
+  }
+  50% {
+    background-color: transparent;
+    bottom: 65px;
+    left: 68px;
+  }
+  100% {
+    background-color: #eeedd3;
+    bottom: 65px;
+    left: 68px;
+  }
+}
+
 /*# sourceMappingURL=input.css.map */
